<resources>
    <!--    titles-->
    <string name="app_name">Sudoku</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Statistic</string>
    <string name="title_gameboard">Game</string>
    <string name="title_level">Levels</string>
    <string name="title_pause">Pause</string>
    <string name="title_gameEnd">End Game</string>
    <string name="title_menu">Menu</string>

    <!--  ui buttons  -->
    <string name="classicGameButton">Start Classic</string>
    <string name="timeGameButton">Start Time</string>

    <string name="level_easy">Easy</string>
    <string name="level_medium">Medium</string>
    <string name="level_hard">Hard</string>

    <string name="homeButton">Home</string>
    <string name="endGame">End Game</string>

    <!--  textView  -->
    <string name="classic_game">Classic Game</string>
    <string name="time_game">Time Game</string>
    <string name="end_game_time">Time:</string>
    <string name="end_game_miss">Mistakes:</string>

    <!--   game buttons-->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <!--  text in card  -->
    <string name="games_played">Games played:</string>
    <string name="games_won">Games won:</string>
    <string name="Best_time">Best time:</string>

    <!--  preferene file  -->
    <string name="pref_file_stat_game">com.app.game.sudoku.STATISTIC_THIS_GAME</string>

</resources>
