<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.app.game.sudoku.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.app.game.sudoku.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_level"
            app:destination="@id/navigation_level"
            app:popUpTo="@id/navigation_home" />
    </fragment>



    <fragment
        android:id="@+id/navigation_level"
        android:name="com.app.game.sudoku.ui.level.LevelGameFragment"
        android:label="@string/title_level"
        tools:layout="@layout/fragment_level" >
        <action
            android:id="@+id/action_navigation_level_to_navigation_gameboard"
            app:destination="@id/navigation_gameboard"
            app:popUpTo="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_gameboard"
        android:name="com.app.game.sudoku.ui.gameboard.GameboardFragment"
        android:label="@string/title_gameboard"
        tools:layout="@layout/fragment_gameboard" >
        <action
            android:id="@+id/action_navigation_gameboard_to_navigation_end"
            app:destination="@id/navigation_end"
            app:popUpTo="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_pause"
        android:name="com.app.game.sudoku.ui.gamevent.GamePauseFragment"
        android:label="@string/title_pause"
        tools:layout="@layout/fragment_pausegame"/>

    <fragment
        android:id="@+id/navigation_end"
        android:name="com.app.game.sudoku.ui.gamevent.EndGameFragment"
        android:label="@string/title_gameEnd"
        tools:layout="@layout/fragment_game_end">

        <action
            android:id="@+id/action_navigation_end_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home" />
    </fragment>


</navigation>
