<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.gameboard.GameboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.app.game.sudoku.ui.gameboard.GameboardView
            android:id="@+id/gameBoardView"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_above="@id/buttonsLayout"
            android:layout_marginStart="5dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.423"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.app.game.sudoku.ui.gameboard.GameboardView>

        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="354dp"
            android:layout_height="46dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="123dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <Button
                android:id="@+id/oneButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one" />

            <Button
                android:id="@+id/twoButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/two" />

            <Button
                android:id="@+id/threeButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/three" />

            <Button
                android:id="@+id/fourButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/four" />

            <Button
                android:id="@+id/fiveButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/five" />

            <Button
                android:id="@+id/sixButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/six" />

            <Button
                android:id="@+id/sevenButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seven" />

            <Button
                android:id="@+id/eightButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eight" />

            <Button
                android:id="@+id/nineButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nine" />


        </LinearLayout>

        <ImageButton
            android:id="@+id/deleteButton"
            style="@android:style/Widget.DeviceDefault.ImageButton"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="24dp"
            android:background="@color/colorAccent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_delete_button_wite_24dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.789"
            app:layout_constraintStart_toStartOf="parent" />

<!--        <ImageButton-->
<!--            android:id="@+id/notesButton"-->
<!--            style="@android:style/Widget.DeviceDefault.Light.ImageButton"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="20dp"-->
<!--            android:scaleType="center"-->
<!--            android:src="@drawable/ic_edit_pan_24dp"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.93"-->
<!--            app:layout_constraintStart_toStartOf="parent" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

